--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+  <head>
+    <title>Ejercicio 4</title>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <h3>Aumento de Sueldo</h3>
+    <p id="rotulo-1">dato 1</p>
+    <input type="text" id="data1" />
+    <p id="rotulo-2">dato 2</p>
+    <input type="text" id="data2" />
+    <p id="rotulo-3">dato 3</p>
+    <input type="text" id="data3" />
+    <button id="send">Calcular Aumento</button>
+    <script src="src/index.ts"></script>
+  </body>
 </html>
