Ejercicio 4 Ejercicio Aumento de Sueldo

--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
   </head>
   <body>
     <h3>Aumento de Sueldo</h3>
-    <p id="rotulo-1">dato 1</p>
-    <input type="text" id="data1" />
-    <p id="rotulo-2">dato 2</p>
-    <input type="text" id="data2" />
-    <p id="rotulo-3">dato 3</p>
-    <input type="text" id="data3" />
+    <p id="rotulo-1">Ingrese Sueldo</p>
+    <input type="text" id="data" />
     <button id="send">Calcular Aumento</button>
     <script src="src/index.ts"></script>
   </body>
